<?xml version="1.0"?>
<package format="2">
  <name>pioneer3dx_explorer</name>
  <version>1.0.0</version>
  <description>The pioneer3dx_explorer package</description>

  <maintainer email="daniel.koch@stud.hs-mannheim.de">Daniel Koch</maintainer>

  <license>MIT</license>

  <author email="daniel.koch@stud.hs-mannheim.de">Daniel Koch</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>openni_camera</build_depend>
  <build_depend>openni_launch</build_depend>
  <build_depend>p2os_launch</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>openni_camera</exec_depend>
  <exec_depend>openni_launch</exec_depend>
  <exec_depend>p2os_launch</exec_depend>


  <export></export>
</package>
